Light/Dark mode bugfix and logo in navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,10 @@ body {
     transition-duration: 0.4s;
 }
 
+#hamburger_icon:hover {
+    cursor: pointer;
+}
+
 /*Header section*/
 
 #headerDivision { /* Whole division*/
